@@ -2,3 +2,4 @@
 /QueryProgetto.sql
 /.DS_Store
 /utilities/databaseSetup.php
+.vscode
